@@ -661,6 +661,9 @@ if ($LASTEXITCODE -ne 0) { throw "R167 stable identity/Profile Editor repair tes
 & $java --add-modules jdk.httpserver -ea -classpath $runtimeClasspath com.inigmasgames.persistentnpcs.R168ProfileSectionEventHotfixTest
 if ($LASTEXITCODE -ne 0) { throw "R168 Profile section event hotfix tests failed with exit code $LASTEXITCODE" }
 
+& $java --add-modules jdk.httpserver -ea -classpath $runtimeClasspath com.inigmasgames.persistentnpcs.R169ProfileDocumentTabsTest
+if ($LASTEXITCODE -ne 0) { throw "R169 Profile document-tab tests failed with exit code $LASTEXITCODE" }
+
 & $java --add-modules jdk.httpserver -ea -classpath $runtimeClasspath com.inigmasgames.persistentnpcs.R147NpcProfileRepairTest
 if ($LASTEXITCODE -ne 0) {
     throw "R147 Profile repair tests failed with exit code $LASTEXITCODE"
